-
Bug
-
Resolution: Fixed
-
P3
-
10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8195575 | 11 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8197716 | 10u-cpu | Roland Westrelin | P3 | Resolved | Fixed | master |
| JDK-8201004 | 10.0.2 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8195926 | 10.0.1 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
With JDK-8186027, attached test case asserts with debug build:
$ java -XX:-TieredCompilation ArrayAccess
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/loopnode.cpp:1335
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/njian/Work/jdk/master/gerrit/src/hotspot/share/opto/loopnode.cpp:1335), pid=20593, tid=20664
# assert(n->in(0) == cle_tail) failed: node not on backedge?
#
# JRE version: OpenJDK Runtime Environment (10.0) (fastdebug build 10-internal+0-adhoc.njian.gerrit)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 10-internal+0-adhoc.njian.gerrit, mixed mode, compressed oops, g1 gc, linux-amd64)
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/njian/Work/jdk/test/benchmarks/microbench/hs_err_pid20593.log
#
# Compiler replay data is saved as:
# /home/njian/Work/jdk/test/benchmarks/microbench/replay_pid20593.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 20664
Dumping core ...
Aborted
$ java -XX:-TieredCompilation ArrayAccess
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/loopnode.cpp:1335
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/njian/Work/jdk/master/gerrit/src/hotspot/share/opto/loopnode.cpp:1335), pid=20593, tid=20664
# assert(n->in(0) == cle_tail) failed: node not on backedge?
#
# JRE version: OpenJDK Runtime Environment (10.0) (fastdebug build 10-internal+0-adhoc.njian.gerrit)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 10-internal+0-adhoc.njian.gerrit, mixed mode, compressed oops, g1 gc, linux-amd64)
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/njian/Work/jdk/test/benchmarks/microbench/hs_err_pid20593.log
#
# Compiler replay data is saved as:
# /home/njian/Work/jdk/test/benchmarks/microbench/replay_pid20593.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 20664
Dumping core ...
Aborted
- backported by
-
JDK-8195575 Compilation fails with "node not on backedge" in OuterStripMinedLoopNode::adjust_strip_mined_loop
-
- Resolved
-
-
JDK-8195926 Compilation fails with "node not on backedge" in OuterStripMinedLoopNode::adjust_strip_mined_loop
-
- Resolved
-
-
JDK-8197716 Compilation fails with "node not on backedge" in OuterStripMinedLoopNode::adjust_strip_mined_loop
-
- Resolved
-
-
JDK-8201004 Compilation fails with "node not on backedge" in OuterStripMinedLoopNode::adjust_strip_mined_loop
-
- Resolved
-
- relates to
-
JDK-8186027 C2: loop strip mining
-
- Resolved
-