8194914: Compilation fails with "node not on backedge" in OuterStripMinedLoopNode::adjust_strip_mined_loop

Modified assert which is too strong.

Reviewed-by: thartmann